refactoring fuzzy