@@ -95,71 +95,6 @@ public class StringUtls {
     }
 
 
-    public static int levenshteinDistance(String s1, String s2) {
-        int[][] dp = new int[s1.length() + 1][s2.length() + 1];
-        for (int i = 0; i <= s1.length(); i++) {
-            for (int j = 0; j <= s2.length(); j++) {
-                if (i == 0) {
-                    dp[i][j] = j;
-                } else if (j == 0) {
-                    dp[i][j] = i;
-                } else {
-                    dp[i][j] = min(dp[i - 1][j - 1] + costOfSubstitution(s1.charAt(i - 1), s2.charAt(j - 1)),
-                            dp[i - 1][j] + 1,
-                            dp[i][j - 1] + 1);
-                }
-            }
-        }
-        return dp[s1.length()][s2.length()];
-    }
-
-    private static int costOfSubstitution(char a, char b) {
-        return a == b ? 0 : 1;
-    }
-
-    private static int min(int... numbers) {
-        return java.util.Arrays.stream(numbers).min().orElse(Integer.MAX_VALUE);
-    }
-
-
-    public static String fuzzyCommodityMatch(String input, int similarity) {
-        return fuzzyMatch(input, similarity, CommodityDao.class, CommodityDao::getAllNamesLowerCase, CommodityDao::getOriginalCase);
-    }
-
-    public static String fuzzyMaterialSearch(String input, int similarity) {
-        return fuzzyMatch(input, similarity, MaterialNameDao.class, MaterialNameDao::getAllNamesLowerCase, MaterialNameDao::getOriginalCase);
-    }
-
-    public static String fuzzySubSystemSearch(String input, int similarity) {
-        return fuzzyMatch(input, similarity, SubSystemDao.class, SubSystemDao::getAllNamesLowerCase, SubSystemDao::getOriginalCase);
-    }
-
-
-    /// re-use for other fuzzy search
-    private static <T> String fuzzyMatch(String input, int similarity, Class<T> daoClass, Function<T, List<String>> candidatesProvider, BiFunction<T, String, String> originalCaseProvider) {
-        if (input == null || input.isBlank()) return null;
-
-        final String lowerInput = input.trim().toLowerCase();
-        List<String> candidates = Database.withDao(daoClass, candidatesProvider);
-
-        String bestLower = null;
-        int bestDist = Integer.MAX_VALUE;
-
-        for (String c : candidates) {
-            int dist = levenshteinDistance(lowerInput, c);
-            if (dist < bestDist) {
-                bestDist = dist;
-                bestLower = c;
-            }
-        }
-
-        if (bestDist <= similarity && bestLower != null) {
-            final String finalBestLower = bestLower;
-            return Database.withDao(daoClass, dao -> originalCaseProvider.apply(dao, finalBestLower));
-        }
-
-        return null;
-    }
 
     /**
      * Converts a version string into a numeric format, preserving up to three version components
@@ -238,7 +173,7 @@ public class StringUtls {
     public static String affirmative() {
         List<String> result = Arrays.stream(
                 new String[]{"yes", "affirmative", "aye-aye!", "certainly", "of course", "rightaway"}
-        ).filter(Objects::nonNull).collect(Collectors.toList());
+        ).filter(Objects::nonNull).toList();
         if (result.isEmpty()) {
             return "Commander";
         }
@@ -255,7 +190,7 @@ public class StringUtls {
 
         List<String> result = Arrays.stream(
                 new String[]{alternativeName, playerHonorific, playerName, playerTitle, playerMilitaryRank}
-        ).filter(Objects::nonNull).collect(Collectors.toList());
+        ).filter(Objects::nonNull).toList();
         if (result.isEmpty()) {
             return "Commander";
         }
